--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sxzz.moe",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.0",
+  "packageManager": "pnpm@10.28.1",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
