--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/vue": "^5.1.4",
     "@unocss/reset": "^66.6.0",
     "astro": "^5.16.15",
+    "remark-github-blockquote-alert": "^2.0.1",
     "vue": "^3.5.27"
   },
   "devDependencies": {
