build: setup typescript typecheck, eslint, and prettier
Add @astrojs/check for TypeScript typechecking and @sxzz/eslint-config with
ESLint for code linting. Integrate prettier-plugin-astro for Astro file
formatting. All type errors, lint issues, and formatting problems have been
resolved. Added scripts: pnpm typecheck, pnpm lint, pnpm lint:fix, pnpm format.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"],
   "compilerOptions": {
-    "types": ["node"],
-    "jsx": "preserve"
-  }
+    "jsx": "preserve",
+    "types": ["node"]
+  },
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"]
 }
