--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@10.28.1",
+  "engines": {
+    "node": "^24.0.0"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "generate:og": "node scripts/generate-og.ts"
+    "generate:og": "node scripts/generate-og.ts",
+    "typecheck": "astro check",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.12",
@@ -19,18 +26,25 @@
     "remark-github-blockquote-alert": "^2.0.1"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.6",
     "@iconify-json/simple-icons": "^1.2.67",
     "@resvg/resvg-js": "^2.6.2",
+    "@sxzz/eslint-config": "^7.5.1",
+    "@sxzz/prettier-config": "^2.2.7",
     "@types/node": "^25.1.0",
     "@unocss/astro": "^66.6.0",
+    "@unocss/eslint-plugin": "^66.6.0",
+    "astro-eslint-parser": "^1.2.2",
+    "eslint": "^9.39.2",
+    "eslint-plugin-astro": "^1.5.0",
+    "prettier": "^3.8.1",
+    "prettier-plugin-astro": "^0.14.1",
     "satori": "^0.19.1",
+    "typescript": "^5.9.3",
     "unocss": "^66.6.0",
     "wrangler": "^4.60.0"
   },
   "resolutions": {
     "vite": "^8.0.0-beta.9"
-  },
-  "engines": {
-    "node": "^24.0.0"
   }
 }
