--- a/package.json
+++ b/package.json
@@ -29,16 +29,14 @@
     "@astrojs/check": "^0.9.6",
     "@iconify-json/simple-icons": "^1.2.67",
     "@resvg/resvg-js": "^2.6.2",
-    "@sxzz/eslint-config": "^7.5.1",
-    "@sxzz/prettier-config": "^2.2.7",
+    "@sxzz/eslint-config": "^7.6.0",
+    "@sxzz/prettier-config": "^2.3.1",
     "@types/node": "^25.1.0",
     "@unocss/astro": "^66.6.0",
     "@unocss/eslint-plugin": "^66.6.0",
-    "astro-eslint-parser": "^1.2.2",
     "eslint": "^9.39.2",
     "eslint-plugin-astro": "^1.5.0",
     "prettier": "^3.8.1",
-    "prettier-plugin-astro": "^0.14.1",
     "satori": "^0.19.1",
     "typescript": "^5.9.3",
     "unocss": "^66.6.0",
@@ -46,5 +44,6 @@
   },
   "resolutions": {
     "vite": "^8.0.0-beta.9"
-  }
+  },
+  "prettier": "@sxzz/prettier-config"
 }
