--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^9.39.2",
     "eslint-plugin-astro": "^1.5.0",
     "prettier": "^3.8.1",
+    "prettier-plugin-astro": "^0.14.1",
     "satori": "^0.19.1",
     "typescript": "^5.9.3",
     "unocss": "^66.6.0",
