refactor: migrate from prettier to dprint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "dprint.dprint",
+  "[json][typescript][markdown]": {
+    "editor.defaultFormatter": "dprint.dprint"
+  }
 }
