--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "typecheck": "astro check",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write ."
+    "format": "dprint fmt"
   },
   "dependencies": {
     "@astrojs/rss": "^4.0.15",
@@ -30,22 +30,22 @@
     "@iconify-json/simple-icons": "^1.2.69",
     "@resvg/resvg-js": "^2.6.2",
     "@sxzz/eslint-config": "^7.6.0",
-    "@sxzz/prettier-config": "^2.3.1",
     "@types/node": "^25.2.0",
     "@types/nprogress": "^0.2.3",
     "@unocss/astro": "^66.6.0",
     "@unocss/eslint-plugin": "^66.6.0",
+    "dprint": "^0.49.1",
     "eslint": "^9.39.2",
     "eslint-plugin-astro": "^1.5.0",
-    "prettier": "^3.8.1",
-    "prettier-plugin-astro": "^0.14.1",
     "satori": "^0.19.1",
     "typescript": "^5.9.3",
     "unocss": "^66.6.0",
     "unrun": "^0.2.26"
   },
+  "pnpm": {
+    "onlyBuiltDependencies": ["dprint"]
+  },
   "resolutions": {
     "vite": "^8.0.0-beta.11"
-  },
-  "prettier": "@sxzz/prettier-config"
+  }
 }
