--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@sxzz/eslint-config": "^7.6.0",
     "@types/node": "^25.2.0",
     "@types/nprogress": "^0.2.3",
+    "@types/opencc-js": "^1",
     "@unocss/astro": "^66.6.0",
     "@unocss/eslint-plugin": "^66.6.0",
     "dprint": "^0.49.1",
