--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "typecheck": "astro check",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "dprint fmt"
+    "format": "dprint fmt",
+    "prepare": "simple-git-hooks"
   },
   "dependencies": {
     "@astrojs/rss": "^4.0.15",
@@ -38,15 +39,21 @@
     "dprint": "^0.49.1",
     "eslint": "^9.39.2",
     "eslint-plugin-astro": "^1.5.0",
+    "lint-staged": "^16.2.7",
     "satori": "^0.19.1",
+    "simple-git-hooks": "^2.13.1",
     "typescript": "^5.9.3",
     "unocss": "^66.6.0",
     "unrun": "^0.2.26"
   },
-  "pnpm": {
-    "onlyBuiltDependencies": ["dprint"]
-  },
+
   "resolutions": {
     "vite": "^8.0.0-beta.11"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,md,astro}": ["eslint --fix", "dprint fmt"]
   }
 }
