--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^25.2.0",
     "@types/nprogress": "^0.2.3",
     "@types/opencc-js": "^1",
+    "@typescript-eslint/parser": "^8.54.0",
     "@unocss/astro": "^66.6.0",
     "@unocss/eslint-plugin": "^66.6.0",
     "dprint": "^0.49.1",
@@ -46,7 +47,6 @@
     "unocss": "^66.6.0",
     "unrun": "^0.2.26"
   },
-
   "resolutions": {
     "vite": "^8.0.0-beta.11"
   },
@@ -54,6 +54,9 @@
     "pre-commit": "pnpm lint-staged"
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx,json,md,astro}": ["eslint --fix", "dprint fmt"]
+    "*.{ts,tsx,js,jsx,json,md,astro}": [
+      "eslint --fix",
+      "dprint fmt"
+    ]
   }
 }
