refactor: consolidate consts into i18n and extract replayAnimations utility

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "dprint.dprint",
-  "[json][typescript][markdown]": {
+  "[json][javascript][typescript][markdown]": {
     "editor.defaultFormatter": "dprint.dprint"
   }
 }
